--- a/partials/index/index.partners.partial.html
+++ b/partials/index/index.partners.partial.html
@@ -7,11 +7,11 @@
     <div class="partners__carousel">
       <!-- Left arrow -->
       <button
-        class="partners__arrow partners__arrow--prev"
+        class="carousel-arrow carousel-arrow--prev"
         aria-label="Previous partners"
       >
         <svg
-          class="partners__arrow-icon"
+          class="carousel-arrow__svg"
           viewBox="0 0 30 30"
           width="30"
           height="30"
@@ -86,11 +86,11 @@
 
       <!-- Right arrow -->
       <button
-        class="partners__arrow partners__arrow--next"
+        class="carousel-arrow carousel-arrow--next"
         aria-label="Next partners"
       >
         <svg
-          class="partners__arrow-icon"
+          class="carousel-arrow__svg"
           viewBox="0 0 30 30"
           width="30"
           height="30"
