--- a/partials/global/global.header-nav.partial.html
+++ b/partials/global/global.header-nav.partial.html
@@ -2,25 +2,27 @@
 <!-- Global Header Navigation (partial) -->
 <!-- ============================= -->
 <section class="header-nav">
-  <div class="header-nav__container container">
+  <div class="header-nav__container">
     <!-- Top bar -->
-    <div class="header-nav__top">
-      <p class="header-nav__welcome-text">
-        Welcome to Our Musical Instruments Store!
-      </p>
+    <div class="header-nav__top-background">
+      <div class="header-nav__top container">
+        <p class="header-nav__welcome-text">
+          Welcome to Our Musical Instruments Store!
+        </p>
 
-      <div class="header-nav__contacts">
-        <a href="mailto:sound@email.com" class="header-nav__email">
-          sound@email.com
-        </a>
-        <a href="tel:+12345678900" class="header-nav__phone">
-          +1 (234) 567 89 00
-        </a>
+        <div class="header-nav__contacts">
+          <a href="mailto:sound@email.com" class="header-nav__email">
+            sound@email.com
+          </a>
+          <a href="tel:+12345678900" class="header-nav__phone">
+            +1 (234) 567 89 00
+          </a>
+        </div>
       </div>
     </div>
 
     <!-- Main navigation -->
-    <nav class="header-nav__main" aria-label="Main navigation">
+    <nav class="header-nav__main container" aria-label="Main navigation">
       <div class="header-nav__logo">
         <a class="header-nav__logo-link" href="index.html">
           <img
@@ -66,7 +68,8 @@
             <svg
               class="social-links__icon si690cbd17ecdfcb30eab9ef69f81631da240e4715b5ae5b6b6cb1e72c1762442523708 svgIcon_1J7 outlined_2wD"
               viewBox="0 0 32 32"
-              width="33" height="33"
+              width="33"
+              height="33"
             >
               <path
                 class="outer_bDW"
@@ -94,7 +97,8 @@
             <svg
               class="social-links__icon si690cbd17ecdfcb30eab9ef69f81631da240e4715b5ae5b6b6cb1e72c1762442523708 svgIcon_1J7 outlined_2wD"
               viewBox="0 0 32 32"
-              width="33" height="33"
+              width="33"
+              height="33"
             >
               <g>
                 <path
@@ -139,7 +143,8 @@
             <svg
               class="social-links__icon si690cbd17ecdfcb30eab9ef69f81631da240e4715b5ae5b6b6cb1e72c1762442523708 svgIcon_1J7 outlined_2wD"
               viewBox="0 0 32 32"
-              width="33" height="33"
+              width="33"
+              height="33"
             >
               <path
                 class="outer_bDW"
