Added new-arrivals css

--- a/css/index.css
+++ b/css/index.css
@@ -3,3 +3,4 @@
 @import "index.header-hero.css";
 @import "global.carousel-arrow.css";
 @import "index.partners.css";
+@import "index.new-arrivals.css";
