--- a/partials/index/index.new-arrivals.partial.html
+++ b/partials/index/index.new-arrivals.partial.html
@@ -19,11 +19,11 @@
     <div class="new-arrivals__carousel">
       <!-- Left arrow -->
       <button
-        class="new-arrivals__arrow new-arrivals__arrow--prev"
-        aria-label="Previous partners"
+        class="carousel-arrow carousel-arrow--prev"
+        aria-label="Previous new-arrivals"
       >
         <svg
-          class="new-arrivals__arrow-icon"
+          class="carousel-arrow__svg"
           viewBox="0 0 30 30"
           width="30"
           height="30"
@@ -129,11 +129,11 @@
 
       <!-- Right arrow -->
       <button
-        class="partners__arrow partners__arrow--next"
-        aria-label="Next partners"
+        class="carousel-arrow carousel-arrow--next"
+        aria-label="Next new-arrivals"
       >
         <svg
-          class="partners__arrow-icon"
+          class="carousel-arrow__svg"
           viewBox="0 0 30 30"
           width="30"
           height="30"
