--- a/css/global.css
+++ b/css/global.css
@@ -33,7 +33,8 @@
 
 img {
   display: block;
-  max-width: 50%;
+  max-width: 100%;
+  height: auto;
 }
 
 ul {
@@ -41,7 +42,7 @@ ul {
 }
 
 .container {
-  max-width: 1000px;
+  max-width: 1200px;
   margin: auto;
   padding: 20px;
 }
