Added promo-offers block, configured css according to design

--- a/css/index.css
+++ b/css/index.css
@@ -4,3 +4,4 @@
 @import "global.carousel-arrow.css";
 @import "index.partners.css";
 @import "index.new-arrivals.css";
+@import "index.promo-offers.css";
