--- a/css/index.css
+++ b/css/index.css
@@ -5,3 +5,4 @@
 @import "index.partners.css";
 @import "index.new-arrivals.css";
 @import "index.promo-offers.css";
+@import "index.promo-fixed.css";
