--- a/css/index.css
+++ b/css/index.css
@@ -7,3 +7,4 @@
 @import "index.promo-offers.css";
 @import "index.promo-fixed.css";
 @import "index.shop.css";
+@import "index.guitar-of-month.css";
