--- a/css/global.header-nav.css
+++ b/css/global.header-nav.css
@@ -11,7 +11,7 @@
 /* Top bar (mobile-first: hidden) */
 
 .header-nav__top-background {
-    background-color: var(--tertiary-background-color);
+  background-color: var(--tertiary-background-color);
 }
 
 .header-nav__top {
@@ -21,7 +21,7 @@
   color: var(--text-color);
   justify-content: space-between;
   align-items: center;
-  padding-inline: 40px;
+  padding-inline: 24px;
 }
 
 .header-nav__contacts {
@@ -35,7 +35,6 @@
   text-decoration: none;
 }
 
-
 /* --------------------------- */
 /* MAIN NAV – MOBILE VERSION   */
 /* --------------------------- */
@@ -46,7 +45,7 @@
   align-items: center;
   padding: 15px 0;
   position: relative;
-  padding-inline: 40px;
+  padding-inline: 24px;
 }
 
 /* Logo */
@@ -137,7 +136,6 @@
 /* ============================== */
 
 @media (min-width: 990px) {
-
   /* Show top bar */
   .header-nav__top {
     display: flex;
@@ -177,5 +175,14 @@
   /* Hide burger */
   .header-nav__burger {
     display: none;
+  }
+}
+
+@media (min-width: 768px) {
+  .header-nav__top {
+    padding-inline: 40px;
+  }
+  .header-nav__main {
+    padding-inline: 40px;
   }
 }
