--- a/partials/global/global.header-nav.partial.html
+++ b/partials/global/global.header-nav.partial.html
@@ -37,22 +37,22 @@
       <!-- Navigation menu -->
       <ul class="header-nav__menu">
         <li class="header-nav__menu-item">
-          <a href="#" class="header-nav__menu-link">New Arrivals</a>
+          <a href="#new-arrivals" class="header-nav__menu-link">New Arrivals</a>
         </li>
         <li class="header-nav__menu-item">
-          <a href="#" class="header-nav__menu-link">Best-Selling</a>
+          <a href="#shop" class="header-nav__menu-link">Best-Selling</a>
         </li>
         <li class="header-nav__menu-item">
-          <a href="#" class="header-nav__menu-link">Guitars</a>
+          <a href="#shop" class="header-nav__menu-link">Guitars</a>
         </li>
         <li class="header-nav__menu-item">
-          <a href="#" class="header-nav__menu-link">Drums</a>
+          <a href="#shop" class="header-nav__menu-link">Drums</a>
         </li>
         <li class="header-nav__menu-item">
-          <a href="#" class="header-nav__menu-link">Orchestric</a>
+          <a href="#shop" class="header-nav__menu-link">Orchestric</a>
         </li>
         <li class="header-nav__menu-item">
-          <a href="#" class="header-nav__menu-link">Contacts</a>
+          <a href="#contacts" class="header-nav__menu-link">Contacts</a>
         </li>
       </ul>
 
