--- a/partials/index/index.contacts.partial.html
+++ b/partials/index/index.contacts.partial.html
@@ -1,7 +1,7 @@
 <!-- ============================= -->
 <!-- Index — contacts (partial) -->
 <!-- ============================= -->
-<section class="contacts">
+<section class="contacts" id="contacts">
   <div class="contacts__container container">
     <div class="contacts__left">
       <p class="contacts__title-small">CONTACT US</p>
