--- a/partials/index/index.new-arrivals.partial.html
+++ b/partials/index/index.new-arrivals.partial.html
@@ -1,7 +1,7 @@
 <!-- ============================= -->
 <!-- Index — New Arrivals (partial) -->
 <!-- ============================= -->
-<section class="new-arrivals section" aria-label="New Arrivals">
+<section class="new-arrivals section" aria-label="New Arrivals" id="new-arrivals">
   <div class="new-arrivals__container container">
     <!-- Заголовки -->
     <header class="new-arrivals__header">
