--- a/partials/index/index.shop.acoustic-guitars.partial.html
+++ b/partials/index/index.shop.acoustic-guitars.partial.html
@@ -6,7 +6,7 @@
   />
   <h3 class="shop-card__title">Western AG01 Acoustic Guitar</h3>
   <p class="shop-card__price">$260.00</p>
-  <button class="shop-card__btn">Add to Cart</button>
+  <button class="btn">Add to Cart</button>
 </article>
 
 <article class="shop-card">
@@ -17,7 +17,7 @@
   />
   <h3 class="shop-card__title">Classic Wood AG03 Acoustic Guitar</h3>
   <p class="shop-card__price">$210.00</p>
-  <button class="shop-card__btn">Add to Cart</button>
+  <button class="btn">Add to Cart</button>
 </article>
 
 <article class="shop-card">
@@ -28,7 +28,7 @@
   />
   <h3 class="shop-card__title">Folk Brown AG04 Acoustic Guitar</h3>
   <p class="shop-card__price">$180.00</p>
-  <button class="shop-card__btn">Add to Cart</button>
+  <button class="btn">Add to Cart</button>
 </article>
 
 <article class="shop-card">
@@ -39,7 +39,7 @@
   />
   <h3 class="shop-card__title">Traveler AG05 Acoustic Guitar</h3>
   <p class="shop-card__price">$150.00</p>
-  <button class="shop-card__btn">Add to Cart</button>
+  <button class="btn">Add to Cart</button>
 </article>
 
 <!-- === OOB UPDATE ДЛЯ МЕНЮ === -->
