--- a/partials/index/index.shop.electric-guitars.partial.html
+++ b/partials/index/index.shop.electric-guitars.partial.html
@@ -6,7 +6,7 @@
   />
   <h3 class="shop-card__title">Raven Bee RB500 Exotic Style Guitar</h3>
   <p class="shop-card__price">$450.00</p>
-  <button class="shop-card__btn">Add to Cart</button>
+  <button class="btn">Add to Cart</button>
 </article>
 
 <article class="shop-card">
@@ -17,7 +17,7 @@
   />
   <h3 class="shop-card__title">Dickson Studio ER100 Electric Guitar</h3>
   <p class="shop-card__price">$180.00</p>
-  <button class="shop-card__btn">Add to Cart</button>
+  <button class="btn">Add to Cart</button>
 </article>
 
 <article class="shop-card">
@@ -28,7 +28,7 @@
   />
   <h3 class="shop-card__title">Dean Doe TRO4506 Electric Guitar</h3>
   <p class="shop-card__price">$220.00</p>
-  <button class="shop-card__btn">Add to Cart</button>
+  <button class="btn">Add to Cart</button>
 </article>
 
 <article class="shop-card">
@@ -39,7 +39,7 @@
   />
   <h3 class="shop-card__title">Raven Classic RT45 Electric Guitar</h3>
   <p class="shop-card__price">$300.00</p>
-  <button class="shop-card__btn">Add to Cart</button>
+  <button class="btn">Add to Cart</button>
 </article>
 
 <!-- === OOB UPDATE ДЛЯ МЕНЮ === -->
