--- a/partials/index/index.new-arrivals.partial.html
+++ b/partials/index/index.new-arrivals.partial.html
@@ -43,8 +43,7 @@
         </svg>
       </button>
 
-      <div class="new-arrivals__track-wrapper">
-        <ul class="new-arrivals__track">
+      <ul class="new-arrivals__track">
           <!-- product card 1 -->
           <li class="new-arrivals__item">
             <article class="product-card">
@@ -55,7 +54,7 @@
               />
               <h3 class="product-card__name">Raven Bee RB500 Exotic Style Guitar</h3>
               <p class="product-card__price">$450.00</p>
-              <button class="btn btn--secondary product-card__btn">
+              <button class="btn">
                 Add to cart
               </button>
             </article>
@@ -71,7 +70,7 @@
               />
               <h3 class="product-card__name">Dowson Little Roomer Snare Drum</h3>
               <p class="product-card__price">$178.00</p>
-              <button class="btn btn--secondary product-card__btn">
+              <button class="btn">
                 Add to cart
               </button>
             </article>
@@ -87,7 +86,7 @@
               />
               <h3 class="product-card__name">Dickson Studio ER100 Electric Guitar</h3>
               <p class="product-card__price">$180.00</p>
-              <button class="btn btn--secondary product-card__btn">
+              <button class="btn">
                 Add to cart
               </button>
             </article>
@@ -103,7 +102,7 @@
               />
               <h3 class="product-card__name">GVC Cool Style Electric Guitar</h3>
               <p class="product-card__price">$640.00</p>
-              <button class="btn btn--secondary product-card__btn">
+              <button class="btn">
                 Add to cart
               </button>
             </article>
@@ -119,13 +118,12 @@
               />
               <h3 class="product-card__name">Bover Rover ERSTQ56 Snare Drum</h3>
               <p class="product-card__price">$128.00</p>
-              <button class="btn btn--secondary product-card__btn">
+              <button class="btn">
                 Add to cart
               </button>
             </article>
           </li>
         </ul>
-      </div>
 
       <!-- Right arrow -->
       <button
