--- a/partials/index/index.shop.drums.partial.html
+++ b/partials/index/index.shop.drums.partial.html
@@ -6,7 +6,7 @@
   />
   <h3 class="shop-card__title">Maple DR01 Drum Kit</h3>
   <p class="shop-card__price">$780.00</p>
-  <button class="shop-card__btn">Add to Cart</button>
+  <button class="btn">Add to Cart</button>
 </article>
 
 <article class="shop-card">
@@ -17,7 +17,7 @@
   />
   <h3 class="shop-card__title">Jazz DR02 Drum Kit</h3>
   <p class="shop-card__price">$620.00</p>
-  <button class="shop-card__btn">Add to Cart</button>
+  <button class="btn">Add to Cart</button>
 </article>
 
 <article class="shop-card">
@@ -28,7 +28,7 @@
   />
   <h3 class="shop-card__title">Studio DR03 Drum Kit</h3>
   <p class="shop-card__price">$540.00</p>
-  <button class="shop-card__btn">Add to Cart</button>
+  <button class="btn">Add to Cart</button>
 </article>
 
 <article class="shop-card">
@@ -39,7 +39,7 @@
   />
   <h3 class="shop-card__title">Compact DR04 Drum Kit</h3>
   <p class="shop-card__price">$420.00</p>
-  <button class="shop-card__btn">Add to Cart</button>
+  <button class="btn">Add to Cart</button>
 </article>
 
 <!-- === OOB UPDATE ДЛЯ МЕНЮ === -->
