--- a/partials/index/index.shop.orchestric.partial.html
+++ b/partials/index/index.shop.orchestric.partial.html
@@ -6,7 +6,7 @@
   />
   <h3 class="shop-card__title">Violin Master V01</h3>
   <p class="shop-card__price">$340.00</p>
-  <button class="shop-card__btn">Add to Cart</button>
+  <button class="btn">Add to Cart</button>
 </article>
 
 <article class="shop-card">
@@ -17,7 +17,7 @@
   />
   <h3 class="shop-card__title">Cello Classic C01</h3>
   <p class="shop-card__price">$400.00</p>
-  <button class="shop-card__btn">Add to Cart</button>
+  <button class="btn">Add to Cart</button>
 </article>
 
 <article class="shop-card">
@@ -28,7 +28,7 @@
   />
   <h3 class="shop-card__title">Silver Flute F01</h3>
   <p class="shop-card__price">$190.00</p>
-  <button class="shop-card__btn">Add to Cart</button>
+  <button class="btn">Add to Cart</button>
 </article>
 
 <article class="shop-card">
@@ -39,7 +39,7 @@
   />
   <h3 class="shop-card__title">Jazz Saxophone S01</h3>
   <p class="shop-card__price">$510.00</p>
-  <button class="shop-card__btn">Add to Cart</button>
+  <button class="btn">Add to Cart</button>
 </article>
 
 <!-- === OOB UPDATE ДЛЯ МЕНЮ === -->
