--- a/partials/index/index.shop.other.partial.html
+++ b/partials/index/index.shop.other.partial.html
@@ -6,7 +6,7 @@
   />
   <h3 class="shop-card__title">Digital Keyboard DK01</h3>
   <p class="shop-card__price">$230.00</p>
-  <button class="shop-card__btn">Add to Cart</button>
+  <button class="btn">Add to Cart</button>
 </article>
 
 <article class="shop-card">
@@ -17,7 +17,7 @@
   />
   <h3 class="shop-card__title">Studio Microphone M02</h3>
   <p class="shop-card__price">$140.00</p>
-  <button class="shop-card__btn">Add to Cart</button>
+  <button class="btn">Add to Cart</button>
 </article>
 
 <article class="shop-card">
@@ -28,7 +28,7 @@
   />
   <h3 class="shop-card__title">Monitor Headphones H01</h3>
   <p class="shop-card__price">$120.00</p>
-  <button class="shop-card__btn">Add to Cart</button>
+  <button class="btn">Add to Cart</button>
 </article>
 
 <article class="shop-card">
@@ -39,7 +39,7 @@
   />
   <h3 class="shop-card__title">Instrument Stand S01</h3>
   <p class="shop-card__price">$40.00</p>
-  <button class="shop-card__btn">Add to Cart</button>
+  <button class="btn">Add to Cart</button>
 </article>
 
 <!-- === OOB UPDATE ДЛЯ МЕНЮ === -->
