--- a/partials/index/index.header-hero.partial.html
+++ b/partials/index/index.header-hero.partial.html
@@ -22,7 +22,7 @@
         </p>
       </div>
       <div class="header-hero__actions">
-        <a href="#shop" class="btn--primary header-hero__cta btn">Shop Now</a>
+        <a href="#shop" class="btn--primary header-hero__cta">Shop Now</a>
       </div>
     </div>
   </div>
