--- a/partials/index/index.promo-offers.partial.html
+++ b/partials/index/index.promo-offers.partial.html
@@ -19,7 +19,7 @@
             just <span class="promo-offers__price-highlight">$1,299</span>
           </p>
 
-          <a href="#" class="promo-offers__btn">Buy Now</a>
+          <a href="#shop" class="promo-offers__btn">Buy Now</a>
         </div>
       </article>
 
@@ -37,7 +37,7 @@
             just <span class="promo-offers__price-highlight">$1,299</span> <!--Hidden in css! - Added for future and same stucture with light card.-->
           </p>
 
-          <a href="#" class="promo-offers__btn promo-offers__btn--light">Buy Now</a>
+          <a href="#shop" class="promo-offers__btn promo-offers__btn--light">Buy Now</a>
         </div>
       </article>
 
